NAS4Free 10.2.0.2 - Prester
---------------------------

Changes:
- Upgrade to FreeBSD 10.2-RELEASE-P2.
- Add Mellanox ConnectX-2 EN driver module. (x64 only)
- Upgrade bash 4.3 to patch 42.
- Upgrade lighttpd to 1.4.37.
- Upgrade php to 5.6.13.

Fixes:
- Fix wrong path in Samba AD. (ticket #228, #232)
- Undefined symbol "av_find_stream_info" in fuppes/libmetadata_libavformat.so.
- AFP share is not advised.
- Fix webserver user logins.
- Fix wrong path ticket 228.

Note:
- iperf2 has been replaced for iperf3 because of inconsistent results for UDP above 2Gbps.
- iperf3 is not backwards compatible with iperf2.x.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
